# visionmaster_app

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/gui-verify/: SKILL.md
.claude/skills/run-app/: SKILL.md
.claude/skills/scaffold-node/: SKILL.md
openspec/: config.yaml
openspec/changes/archive/2026-06-12-redesign-ui-axon/: design.md  tasks.md
openspec/changes/archive/2026-06-12-redesign-ui-axon/specs/desktop-shell/: spec.md
openspec/changes/archive/2026-06-12-redesign-ui-axon/specs/inspection-panels/: spec.md
openspec/changes/redesign-ui-axon/: proposal.md  tasks.md
openspec/changes/redesign-ui-axon/specs/node-canvas/: spec.md
openspec/specs/desktop-shell/: spec.md
openspec/specs/inspection-panels/: spec.md
openspec/specs/node-canvas/: spec.md
tests/: conftest.py  test_bridge.py  test_engine.py  test_image_source.py
tests/test_app/: conftest.py  test_canvas.py  test_constants.py  test_demo_flow.py  test_graph_bridge.py  test_icons.py  test_main_window.py  test_panels.py  test_shell.py  test_theme.py
visionpower/: __init__.py  render.py
visionpower/app/: __init__.py  canvas.py  constants.py  demo_flow.py  dock.py  graph_bridge.py  icons.py  main.py  main_window.py  panels.py  preview_view.py  property_panel.py  theme.py  title_bar.py  toolbar.py
visionpower/core/: __init__.py  graph.py  inference.py  node.py  params.py  ports.py  registry.py  scheduler.py  serialize.py  types.py
visionpower/nodes/: __init__.py  analysis.py  filters.py  sinks.py  sources.py
