[project]
name = "visionpower-dev"
version = "0.1.0"
description = "Factory-floor image processing & defect detection platform (node-based, VisionMaster-style)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
]

# GUI stack is an optional extra: the pure-Python `core` engine installs and
# tests without Qt. Install with `uv sync --extra gui`. The node canvas is now
# drawn with QtSvg/QPainter, so NodeGraphQt is no longer required.
[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
# Deferred to milestone 2 (model nodes):
#   inference = ["openvino>=2024.0"]

[project.scripts]
visionpower = "visionpower.app.main:main"

[dependency-groups]
# Always synced. Engine tests need only pytest (no Qt).
dev = [
    "pytest>=8",
]
# GUI tests only. pytest-qt needs a Qt binding to import, so it lives apart from
# `dev`. Run with: uv sync --extra gui --group gui-dev
gui-dev = [
    "pytest-qt>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visionpower"]

[tool.pytest.ini_options]
testpaths = ["tests"]
